--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "@langchain/core": "^1.1.17",
     "@langchain/langgraph": "^1.1.2",
     "@langchain/openai": "^1.2.3",
+    "@langchain/textsplitters": "^1.0.1",
     "@monaco-editor/react": "^4.7.0",
     "@qdrant/js-client-rest": "^1.16.2",
     "@radix-ui/react-avatar": "^1.1.11",
